@@ -1,3 +1,7 @@
+2001-05-03  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/gtkhex.c: applied a patch for font width handling.
+
 2001-04-15  Jaka Mocnik  <jaka@gnu.org>
 
 	* merged changes from HEAD: scrolling fixes and printing updates.
